--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,8 @@ env_logger = "0.10.1"
 futures = "0.3"
 futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
 headers = "0.4"
+hyper = { version = "1.0", features = [] }
+hyper-util = { version = "0.1", features = ["tokio", "server-auto", "http1"] }
 log = "0.4.20"
 rand = "0.8.5"
 rustyline = "13.0.0"
@@ -28,8 +30,9 @@ shellwords = "1.1.0"
 tokio = { version = "1", features = ["full"] }
 tokio-tungstenite = "0.20"
 tower = { version = "0.4", features = ["util"] }
-tower-http = { version = "0.5.0", features = ["add-extension", "fs", "trace"] }
+tower-http = { version = "0.5.0", features = ["add-extension", "fs", "trace", "timeout"] }
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 url = "2.5.0"
+warp = "0.3"
 websocket = "0.27.0"
