--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,12 +15,14 @@ categories = ["command-line-utilities"]
 [dependencies]
 axum = { version = "0.7.2", features = ["ws"] }
 axum-extra = { version = "0.9.0", features = ["typed-header"] }
+cc = "1.0"
 clap = { version = "4.4.8", features = ["derive"] }
 colored = "2.1.0"
 env_logger = "0.10.1"
 futures = "0.3"
 futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
 headers = "0.4"
+home = "0.5.9"
 hyper = { version = "1.0", features = [] }
 hyper-util = { version = "0.1", features = ["tokio", "server-auto", "http1"] }
 log = "0.4.20"
