--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,7 @@ rustyline = "13.0.0"
 serde = { version = "1.0.193", features = ["derive"] }
 serde_json = "1.0.108"
 shellwords = "1.1.0"
+spinners = "4.1.1"
 tokio = { version = "1", features = ["full"] }
 tokio-tungstenite = "0.20"
 tower = { version = "0.4", features = ["util"] }
