--- a/implants/Cargo.toml
+++ b/implants/Cargo.toml
@@ -3,11 +3,18 @@ name = "implants"
 version = "0.0.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+
+[[bin]]
+name = "implant"
+path = "src/main.rs"
+
 
 [dependencies.windows]
 version = "0.52"
 features = [
     "Win32_Foundation",
+    "Win32_Networking_WinHttp",
+    "Win32_System_Com",
+    "Win32_System_Memory",
     "Win32_System_Threading",
 ]
