--- a/implants/Cargo.toml
+++ b/implants/Cargo.toml
@@ -10,6 +10,9 @@ path = "src/main.rs"
 
 
 [dependencies]
+serde = { version = "1.0.193", features = ["derive"] }
+serde_json = "1.0.108"
+tokio = { version = "1", features = ["full"] }
 
 
 [dependencies.windows]
@@ -17,7 +20,10 @@ version = "0.52"
 features = [
     "Win32_Foundation",
     "Win32_Networking_WinHttp",
+    "Win32_Networking_WinSock",
+    "Win32_Security_Authentication_Identity",
     "Win32_System_Com",
     "Win32_System_Memory",
     "Win32_System_Threading",
+    "Win32_System_SystemInformation",
 ]
