--- a/implants/Cargo.toml
+++ b/implants/Cargo.toml
@@ -21,6 +21,8 @@ features = [
     "Win32_Foundation",
     "Win32_Networking_WinHttp",
     "Win32_Networking_WinSock",
+    "Win32_NetworkManagement_IpHelper",
+    "Win32_NetworkManagement_Ndis",
     "Win32_Security_Authentication_Identity",
     "Win32_System_Com",
     "Win32_System_Memory",
