--- a/implants/Cargo.toml
+++ b/implants/Cargo.toml
@@ -10,8 +10,10 @@ path = "src/main.rs"
 
 
 [dependencies]
+rand = "0.8.5"
 serde = { version = "1.0.193", features = ["derive"] }
 serde_json = "1.0.108"
+shellwords = "1.1.0"
 tokio = { version = "1", features = ["full"] }
 
 
