--- a/implants/Cargo.toml
+++ b/implants/Cargo.toml
@@ -26,8 +26,11 @@ features = [
     "Win32_NetworkManagement_IpHelper",
     "Win32_NetworkManagement_Ndis",
     "Win32_Security_Authentication_Identity",
+    "Win32_Storage_FileSystem",
     "Win32_System_Com",
+    "Win32_System_IO",
     "Win32_System_Memory",
+    "Win32_System_Pipes",
     "Win32_System_Threading",
     "Win32_System_SystemInformation",
 ]
