--- a/implants/Cargo.toml
+++ b/implants/Cargo.toml
@@ -33,4 +33,5 @@ features = [
     "Win32_System_Pipes",
     "Win32_System_Threading",
     "Win32_System_SystemInformation",
+    "Win32_UI_WindowsAndMessaging",
 ]
