--- a/implants/Cargo.toml
+++ b/implants/Cargo.toml
@@ -11,6 +11,7 @@ path = "src/main.rs"
 
 [dependencies]
 rand = "0.8.5"
+screenshots = "0.8.6"
 serde = { version = "1.0.193", features = ["derive"] }
 serde_json = "1.0.108"
 shellwords = "1.1.0"
@@ -21,6 +22,7 @@ tokio = { version = "1", features = ["full"] }
 version = "0.52"
 features = [
     "Win32_Foundation",
+    "Win32_Graphics_Gdi",
     "Win32_Networking_WinHttp",
     "Win32_Networking_WinSock",
     "Win32_NetworkManagement_IpHelper",
