--- a/implants/Cargo.toml
+++ b/implants/Cargo.toml
@@ -18,9 +18,12 @@ shellwords = "1.1.0"
 tokio = { version = "1", features = ["full"] }
 
 
-[dependencies.windows]
-version = "0.52"
-features = [
+[target.'cfg(target_os = "linux")'.dependencies]
+reqwest = { version = "0.11", features = ["json"] }
+
+
+[target.'cfg(target_os = "windows")'.dependencies]
+windows = { version = "0.52", features = [
     "Win32_Foundation",
     "Win32_Graphics_Gdi",
     "Win32_Networking_WinHttp",
@@ -36,4 +39,4 @@ features = [
     "Win32_System_Threading",
     "Win32_System_SystemInformation",
     "Win32_UI_WindowsAndMessaging",
-]
+] }
