--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,11 +13,13 @@ categories = ["command-line-utilities"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+aes-gcm-siv = "0.11.1"
 axum = { version = "0.7.2", features = ["ws"] }
 axum-extra = { version = "0.9.0", features = ["typed-header"] }
 cc = "1.0"
 clap = { version = "4.4.8", features = ["derive"] }
 colored = "2.1.0"
+data-encoding = "2.5.0"
 env_logger = "0.10.1"
 futures = "0.3"
 futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
