--- a/implants/Cargo.toml
+++ b/implants/Cargo.toml
@@ -10,6 +10,8 @@ path = "src/main.rs"
 
 
 [dependencies]
+aes-gcm-siv = "0.11.1"
+data-encoding = "2.5.0"
 rand = "0.8.5"
 screenshots = "0.8.6"
 serde = { version = "1.0.193", features = ["derive"] }
