--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ aes-gcm-siv = "0.11.1"
 axum = { version = "0.7.2", features = ["ws"] }
 axum-extra = { version = "0.9.0", features = ["typed-header"] }
 cc = "1.0"
+chrono = "0.4.31"
 clap = { version = "4.4.8", features = ["derive"] }
 colored = "2.1.0"
 data-encoding = "2.5.0"
@@ -30,7 +31,7 @@ hyper-util = { version = "0.1", features = ["tokio", "server-auto", "http1"] }
 log = "0.4.20"
 rand = "0.8.5"
 rustyline = "13.0.0"
-rusqlite = { version = "0.30.0", features = ["bundled"] }
+rusqlite = { version = "0.30.0", features = ["bundled", "chrono"] }
 serde = { version = "1.0.193", features = ["derive"] }
 serde_json = "1.0.108"
 shellwords = "1.1.0"
@@ -44,3 +45,4 @@ tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 url = "2.5.0"
 warp = "0.3"
 websocket = "0.27.0"
+x25519-dalek = { version = "2.0.0", features = ["static_secrets"] }
