--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,19 +29,24 @@ home = "0.5.9"
 hyper = { version = "1.0", features = [] }
 hyper-util = { version = "0.1", features = ["tokio", "server-auto", "http1"] }
 log = "0.4.20"
+pki-types = { package = "rustls-pki-types", version = "1" }
 rand = "0.8.5"
+rcgen = { version = "0.12.0", features = ["pem", "x509-parser"] }
+rustls = "0.22.1"
+rustls-pemfile = "2.0.0"
 rustyline = "13.0.0"
 rusqlite = { version = "0.30.0", features = ["bundled", "chrono"] }
 serde = { version = "1.0.193", features = ["derive"] }
 serde_json = "1.0.108"
 shellwords = "1.1.0"
 spinners = "4.1.1"
+time = "0.3.31"
 tokio = { version = "1", features = ["full"] }
 tokio-tungstenite = "0.20"
 tower = { version = "0.4", features = ["util"] }
 tower-http = { version = "0.5.0", features = ["add-extension", "fs", "trace", "timeout"] }
-tracing = "0.1"
-tracing-subscriber = { version = "0.3", features = ["env-filter"] }
+tokio-rustls = "0.25.0"
+tower-service = "0.3.2"
 url = "2.5.0"
 warp = "0.3"
 websocket = "0.27.0"
