--- a/implants/Cargo.toml
+++ b/implants/Cargo.toml
@@ -22,7 +22,7 @@ x25519-dalek = { version = "2.0.0", features = ["static_secrets"] }
 
 
 [target.'cfg(target_os = "linux")'.dependencies]
-reqwest = { version = "0.11", features = ["json"] }
+reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
 
 
 [target.'cfg(target_os = "windows")'.dependencies]
