--- a/implants/Cargo.toml
+++ b/implants/Cargo.toml
@@ -34,6 +34,7 @@ windows = { version = "0.52", features = [
     "Win32_NetworkManagement_IpHelper",
     "Win32_NetworkManagement_Ndis",
     "Win32_Security_Authentication_Identity",
+    "Win32_Security_Cryptography",
     "Win32_Storage_FileSystem",
     "Win32_System_Com",
     "Win32_System_IO",
