--- a/implants/Cargo.toml
+++ b/implants/Cargo.toml
@@ -13,6 +13,7 @@ path = "src/main.rs"
 aes-gcm-siv = "0.11.1"
 data-encoding = "2.5.0"
 rand = "0.8.5"
+regex = "1.10.2"
 screenshots = "0.8.6"
 serde = { version = "1.0.193", features = ["derive"] }
 serde_json = "1.0.108"
