--- a/implants/Cargo.toml
+++ b/implants/Cargo.toml
@@ -19,6 +19,7 @@ serde = { version = "1.0.193", features = ["derive"] }
 serde_json = "1.0.108"
 shellwords = "1.1.0"
 tokio = { version = "1", features = ["full"] }
+whoami = "1.4.1"
 x25519-dalek = { version = "2.0.0", features = ["static_secrets"] }
 
 
