--- a/implants/Cargo.toml
+++ b/implants/Cargo.toml
@@ -18,6 +18,7 @@ screenshots = "0.8.6"
 serde = { version = "1.0.193", features = ["derive"] }
 serde_json = "1.0.108"
 shellwords = "1.1.0"
+sysinfo = "0.30.5"
 tokio = { version = "1", features = ["full"] }
 whoami = "1.4.1"
 x25519-dalek = { version = "2.0.0", features = ["static_secrets"] }
