--- a/implants/Cargo.toml
+++ b/implants/Cargo.toml
@@ -11,7 +11,10 @@ path = "src/main.rs"
 
 [dependencies]
 aes-gcm-siv = "0.11.1"
+base64 = "0.21.6"
 data-encoding = "2.5.0"
+goblin = "0.8.0"
+obfstr = "0.4.3"
 rand = "0.8.5"
 regex = "1.10.2"
 screenshots = "0.8.6"
@@ -29,7 +32,9 @@ reqwest = { version = "0.11", default-features = false, features = ["json", "rus
 
 
 [target.'cfg(target_os = "windows")'.dependencies]
+ntapi = "0.4.1"
 windows = { version = "0.52", features = [
+    "Wdk_Foundation",
     "Win32_Foundation",
     "Win32_Graphics_Gdi",
     "Win32_Networking_WinHttp",
@@ -41,9 +46,12 @@ windows = { version = "0.52", features = [
     "Win32_Storage_FileSystem",
     "Win32_System_Com",
     "Win32_System_IO",
+    "Win32_System_LibraryLoader",
     "Win32_System_Memory",
     "Win32_System_Pipes",
+    "Win32_System_SystemInformation",
     "Win32_System_Threading",
     "Win32_System_SystemInformation",
+    "Win32_System_WindowsProgramming",
     "Win32_UI_WindowsAndMessaging",
 ] }
