--- a/implants/Cargo.toml
+++ b/implants/Cargo.toml
@@ -14,6 +14,7 @@ aes-gcm-siv = "0.11.1"
 base64 = "0.21.6"
 data-encoding = "2.5.0"
 goblin = "0.8.0"
+hex = "0.4.3"
 obfstr = "0.4.3"
 rand = "0.8.5"
 regex = "1.10.2"
