--- a/implants/Cargo.toml
+++ b/implants/Cargo.toml
@@ -24,6 +24,7 @@ serde_json = "1.0.108"
 shellwords = "1.1.0"
 sysinfo = "0.30.5"
 tokio = { version = "1", features = ["full"] }
+url = "2.5.0"
 whoami = "1.4.1"
 x25519-dalek = { version = "2.0.0", features = ["static_secrets"] }
 
