--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ categories = ["command-line-utilities"]
 
 [dependencies]
 aes-gcm-siv = "0.11.1"
+async-stream = "0.2"
 axum = { version = "0.7.2", features = ["ws"] }
 axum-extra = { version = "0.9.0", features = ["typed-header"] }
 base64 = "0.21.6"
@@ -31,6 +32,7 @@ hyper = { version = "1.0", features = [] }
 hyper-util = { version = "0.1", features = ["tokio", "server-auto", "http1"] }
 log = "0.4.20"
 pki-types = { package = "rustls-pki-types", version = "1" }
+prost = "0.12"
 rand = "0.8.5"
 rcgen = { version = "0.12.0", features = ["pem", "x509-parser"] }
 rustls = "0.22.1"
@@ -43,11 +45,17 @@ shellwords = "1.1.0"
 spinners = "4.1.1"
 time = "0.3.31"
 tokio = { version = "1", features = ["full"] }
+tokio-rustls = "0.25.0"
+tokio-stream = "0.1"
 tokio-tungstenite = "0.20"
+tonic = "0.10"
 tower = { version = "0.4", features = ["util"] }
 tower-http = { version = "0.5.0", features = ["add-extension", "fs", "trace", "timeout"] }
-tokio-rustls = "0.25.0"
 tower-service = "0.3.2"
 url = "2.5.0"
 warp = "0.3"
 x25519-dalek = { version = "2.0.0", features = ["static_secrets"] }
+
+
+[build-dependencies]
+tonic-build = "0.10"
