--- a/implants/Cargo.toml
+++ b/implants/Cargo.toml
@@ -12,6 +12,7 @@ path = "src/main.rs"
 [dependencies]
 aes-gcm-siv = "0.11.1"
 base64 = "0.21.6"
+chrono = "0.4.31"
 data-encoding = "2.5.0"
 goblin = "0.8.0"
 hex = "0.4.3"
