--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,13 +31,14 @@ home = "0.5.9"
 hyper = { version = "1.0", features = [] }
 hyper-util = { version = "0.1", features = ["tokio", "server-auto", "http1"] }
 log = "0.4.20"
+pad = "0.1.6"
 pki-types = { package = "rustls-pki-types", version = "1" }
 prost = "0.12"
 rand = "0.8.5"
 rcgen = { version = "0.12.0", features = ["pem", "x509-parser"] }
 rustls = "0.22.1"
 rustls-pemfile = "2.0.0"
-rustyline = "13.0.0"
+rustyline = { version = "13.0.0", features = ["custom-bindings", "derive"] }
 rusqlite = { version = "0.30.0", features = ["bundled", "chrono"] }
 serde = { version = "1.0.193", features = ["derive"] }
 serde_json = "1.0.108"
